# maybe-fatal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml  tests.yml
derive/: Cargo.toml  README.md
derive/src/: diagnose.rs  diagnostic_group.rs  diagnostic_info.rs  lib.rs  partial_diagnose.rs  utils.rs
derive/src/attribute/: docs.rs  field.rs  item.rs  message.rs  mod.rs  repr.rs  variant.rs
examples/: README.md
examples/minimal-tao/: README.md  main.rs
examples/tao/: README.md  compiler.rs  diagnostics.rs  main.rs
src/: additional_attributes.rs  classified.rs  color_palette.rs  context.rs  lib.rs  prelude.rs  severity.rs  traits.rs
src/code/: discriminant.rs  mod.rs
src/sink/: collect.rs  colored.rs  filter.rs  ignore.rs  mod.rs  report.rs
