[workspace]
resolver = "3"
members = ["derive"]

[workspace.package]
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"
license = "LGPL-3.0+"
categories = ["development-tools", "parsing"]
keywords = ["diagnostic", "compiler", "error"]
repository = "https://github.com/RosieTheGhostie/maybe-fatal"
homepage = "https://github.com/RosieTheGhostie/maybe-fatal"

[package]
name = "maybe-fatal"
description = "Potentially fatal diagnostics and diagnostic handling for compilers"
authors.workspace = true
version = "0.1.0-beta.3"
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/maybe-fatal/latest/"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
ariadne = "0.6"
sealed = "0.6"
maybe-fatal-derive = { version = "0.1.0-beta.3", path = "derive", optional = true }

[dev-dependencies]
maybe-fatal-derive.path = "derive"

[features]
derive = ["dep:maybe-fatal-derive"]

default = ["derive"]
full = ["derive"]

[[example]]
name = "minimal-tao"
required-features = ["derive"]

[[example]]
name = "tao"
required-features = ["derive"]

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
